--- a/style.css
+++ b/style.css
@@ -1,5 +1,83 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Space+Mono:wght@400;700&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #BDBDBD;
+}
+
+html {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
+h4 {
+    font-family: Inconsolata;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: -0.08em;
+    text-align: left;
+    color: #333333;
+    margin: 25px 30px;
+}
+
+.main {
+    height: 450px;
+    width: 100vw;
+    margin-top: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-div {
+    height: 100%;
+    width: 50%;
+}
+
+.left-div img {
+    width: 539.22px ;
+    height: 447.43px ;
+    /* top: 265px ;
+    left: 77px; */
+    margin-left: 130px;
+}
+.right-div{
+    height: 100%;
+    width: 50%;
+    margin-right: 110px; 
+}
+.right-div h1{
+    font-size: 70px;
+    font-family: Space Mono;
+    font-weight: 700;
+    color: #333333;
+    ;
+}
+.right-div p{
+    height: 141px;
+    width: 419px;
+    font-family: Space Mono;
+    font-size: 24px;
+    letter-spacing: 1px;
+    line-height: 35px;
+    font-weight: 400;
+    padding-top: 20px;
+}
+.btn{
+    height: 70px;
+    width: 220px;
+    background-color: #333333;
+    color: #FFFFFF;
+    font-family: Space Mono;
+    font-weight: 700;
+    font-size: 16px;
+    margin-top: 65px;
+}
+.blank{
+    height: 500px;
+    width: 100vw;
 }
